Make sure anime detail pages don't distort images

--- a/public/css/base.myth.css
+++ b/public/css/base.myth.css
@@ -307,6 +307,10 @@ a:hover, a:active {
 	margin: var(--normal-padding);
 }
 
+.media > img {
+	width: 100%;
+}
+
 .media .edit_buttons > button {
 	margin:0.5em auto;
 }
